--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chatgpt": "^5.2.2",
     "custom-env": "^2.0.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "openai": "^3.2.1",
     "pg": "^8.3.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.4"
